# genai-image-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  demo_progress.py  gradio-ui-best-practices.md  main.py  pyproject.toml  requirements.txt  ui-design-guidelines.md
.github/workflows/: ci.yml
frontend/: package.json
frontend/src/: App.js
tests/: conftest.py  test_advanced_features.py  test_auth.py  test_dataset.py  test_model_cache.py
windsurf_dreambooth/: __init__.py  __main__.py
windsurf_dreambooth/api/: app.py  auth.py
windsurf_dreambooth/config/: constants.py  settings.py
windsurf_dreambooth/models/: generator.py  manager.py
windsurf_dreambooth/training/: dataset.py  trainer.py
windsurf_dreambooth/ui/: app.py  components.py
windsurf_dreambooth/utils/: logging.py
